--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,23 +6,22 @@ on:
   pull_request:
     branches: '*'
 
-
 jobs:
-  perl-job:
+  build:
     runs-on: ubuntu-latest
     strategy:
-      fail-fast: false
       matrix:
-        perl-version:
-          - '5.32'
+        perl:
+          - '5.30'
+          - '5.30'
           - '5.26'
-
-container:
- image: perldocker/perl-tester:${{ matrix.perl-version }}
- name: Perl ${{ matrix.perl-version }}
- steps:
-   - uses: actions/checkout@v2
-   - name: run tests
-     run: |
-         cpanm --installdeps --notest .
-         prove -lv
+    name: Perl ${{ matrix.perl }}        
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up perl
+        uses: shogo82148/actions-setup-perl@v1
+        with:
+          perl-version: ${{ matrix.perl }}
+      - run: perl -V
+      - run: cpanm --installdeps .
+      - run: prove -lv t        
